[gd_scene load_steps=22 format=3 uid="uid://bk0tcwyu7c8k2"]

[ext_resource type="Texture2D" uid="uid://d10q58kdb0hjl" path="res://assets/eagle.png" id="1_2vgvb"]
[ext_resource type="Script" uid="uid://di3v8p6u65ato" path="res://scripts/eagle.gd" id="2_jdxlk"]
[ext_resource type="Texture2D" uid="uid://b6vtcpa5wemyw" path="res://assets/WarningSign_PixyFantasy/WarningSign01.png" id="3_bx3kx"]
[ext_resource type="Script" uid="uid://b5lxai2lpgiwf" path="res://scripts/death.gd" id="3_g2fde"]
[ext_resource type="Texture2D" uid="uid://bfoayd22u0auy" path="res://assets/WarningSign_PixyFantasy/WarningSign02.png" id="4_s8g5b"]
[ext_resource type="Texture2D" uid="uid://blysmwf7s363q" path="res://assets/WarningSign_PixyFantasy/WarningSign03.png" id="5_3ywqr"]
[ext_resource type="Texture2D" uid="uid://gmddobclv3f8" path="res://assets/WarningSign_PixyFantasy/WarningSign04.png" id="6_ljhfn"]
[ext_resource type="Texture2D" uid="uid://c7tvgayt403eq" path="res://assets/WarningSign_PixyFantasy/WarningSign05.png" id="7_ypgs3"]
[ext_resource type="Texture2D" uid="uid://ddo2mjuge4lsv" path="res://assets/WarningSign_PixyFantasy/WarningSign06.png" id="8_udr1e"]
[ext_resource type="Texture2D" uid="uid://gv4m3iv3p3vq" path="res://assets/WarningSign_PixyFantasy/WarningSign07.png" id="9_3nvcm"]
[ext_resource type="Texture2D" uid="uid://b1r5a7lvxoidy" path="res://assets/WarningSign_PixyFantasy/WarningSign08.png" id="10_e4w2x"]
[ext_resource type="Texture2D" uid="uid://r5q1mm7fealy" path="res://assets/WarningSign_PixyFantasy/WarningSign09.png" id="11_rnp1r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jdxlk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2fde"]
atlas = ExtResource("1_2vgvb")
region = Rect2(164, 86, 40, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wwoj"]
atlas = ExtResource("1_2vgvb")
region = Rect2(204, 86, 40, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ohb7"]
atlas = ExtResource("1_2vgvb")
region = Rect2(244, 86, 40, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_32mqa"]
atlas = ExtResource("1_2vgvb")
region = Rect2(284, 86, 40, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_av1ye"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2fde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wwoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ohb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32mqa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2fde"]
radius = 153.013

[sub_resource type="SpriteFrames" id="SpriteFrames_g00ga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bx3kx")
}, {
"duration": 1.0,
"texture": ExtResource("4_s8g5b")
}, {
"duration": 1.0,
"texture": ExtResource("5_3ywqr")
}, {
"duration": 1.0,
"texture": ExtResource("6_ljhfn")
}, {
"duration": 1.0,
"texture": ExtResource("7_ypgs3")
}, {
"duration": 1.0,
"texture": ExtResource("8_udr1e")
}, {
"duration": 1.0,
"texture": ExtResource("9_3nvcm")
}, {
"duration": 1.0,
"texture": ExtResource("10_e4w2x")
}, {
"duration": 1.0,
"texture": ExtResource("11_rnp1r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s8g5b"]
radius = 10.8696
height = 35.4167

[node name="eagle" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_jdxlk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jdxlk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -3)
sprite_frames = SubResource("SpriteFrames_av1ye")
autoplay = "default"
frame_progress = 0.873219

[node name="LOSEagle" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="LOSEagle" type="CollisionShape2D" parent="LOSEagle"]
shape = SubResource("CircleShape2D_g2fde")

[node name="los_ray" type="RayCast2D" parent="."]
target_position = Vector2(135, 52)

[node name="RayCastBot" type="RayCast2D" parent="."]
target_position = Vector2(1, 13)
collision_mask = 3

[node name="RayCastTop" type="RayCast2D" parent="."]
target_position = Vector2(0, -12)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -19)
scale = Vector2(0.4375, 0.375)
sprite_frames = SubResource("SpriteFrames_g00ga")

[node name="goonbadeath" type="StaticBody2D" parent="."]
script = ExtResource("3_g2fde")

[node name="Area2D" type="Area2D" parent="goonbadeath"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="goonbadeath/Area2D"]
position = Vector2(-4.54747e-13, -2)
rotation = 1.5708
scale = Vector2(0.92, 0.959999)
shape = SubResource("CapsuleShape2D_s8g5b")

[connection signal="body_entered" from="goonbadeath/Area2D" to="goonbadeath" method="_on_area_2d_body_entered"]
